include/efp.h


enum efp_result {
	EFP_RESULT_SUCCESS = 0,
	EFP_RESULT_FATAL,
	EFP_RESULT_NO_MEMORY,
	EFP_RESULT_FILE_NOT_FOUND,
	EFP_RESULT_SYNTAX_ERROR,
	EFP_RESULT_UNKNOWN_FRAGMENT,
	EFP_RESULT_POL_NOT_CONVERGED
};
enum efp_disp_damp {
	EFP_DISP_DAMP_OVERLAP = 0, 
	EFP_DISP_DAMP_TT,          
	EFP_DISP_DAMP_OFF          
};
enum efp_elec_damp {
	EFP_ELEC_DAMP_SCREEN = 0,  
	EFP_ELEC_DAMP_OVERLAP,     
	EFP_ELEC_DAMP_OFF          
};
enum efp_pol_damp {
	EFP_POL_DAMP_TT = 0,       
	EFP_POL_DAMP_OFF           
};
enum efp_coord_type {
	EFP_COORD_TYPE_XYZABC = 0,
	EFP_COORD_TYPE_POINTS,
	EFP_COORD_TYPE_ROTMAT
};
enum efp_pol_driver {
	EFP_POL_DRIVER_ITERATIVE = 0,
	EFP_POL_DRIVER_DIRECT
};
struct efp;
struct efp_opts {
	unsigned terms;
	enum efp_disp_damp disp_damp;
	enum efp_elec_damp elec_damp;
	enum efp_pol_damp pol_damp;
	enum efp_pol_driver pol_driver;
	int enable_pbc;
	int enable_cutoff;
	double swf_cutoff;
};
struct efp_energy {
	double electrostatic;
	double charge_penetration;
	double electrostatic_point_charges;
	double polarization;
	double dispersion;
	double ai_dispersion;
	double exchange_repulsion;
	double total;
};
struct efp_atom {
	char label[32];   
	double x;         
	double y;         
	double z;         
	double mass;      
	double znuc;      
};
typedef enum efp_result (*efp_electron_density_field_fn)(size_t n_pt,
    const double *xyz, double *field, void *user_data);
const char *efp_banner(void);
void efp_print_banner(void);
struct efp *efp_create(void);
void efp_opts_default(struct efp_opts *opts);
void efp_set_error_log(void (*cb)(const char *));
enum efp_result efp_set_opts(struct efp *efp, const struct efp_opts *opts);
enum efp_result efp_get_opts(struct efp *efp, struct efp_opts *opts);
enum efp_result efp_add_potential(struct efp *efp, const char *path);
enum efp_result efp_add_fragment(struct efp *efp, const char *name);
enum efp_result efp_prepare(struct efp *efp);
enum efp_result efp_skip_fragments(struct efp *efp, size_t i, size_t j,
    int value);
enum efp_result efp_set_electron_density_field_fn(struct efp *efp,
    efp_electron_density_field_fn fn);
enum efp_result efp_set_electron_density_field_user_data(struct efp *efp,
    void *user_data);
enum efp_result efp_set_point_charges(struct efp *efp, size_t n_ptc,
    const double *ptc, const double *xyz);
enum efp_result efp_get_point_charge_count(struct efp *efp, size_t *n_ptc);
enum efp_result efp_get_point_charge_values(struct efp *efp, double *ptc);
enum efp_result efp_set_point_charge_values(struct efp *efp, const double *ptc);
enum efp_result efp_get_point_charge_coordinates(struct efp *efp, double *xyz);
enum efp_result efp_set_point_charge_coordinates(struct efp *efp,
    const double *xyz);
enum efp_result efp_get_point_charge_gradient(struct efp *efp, double *grad);
enum efp_result efp_set_coordinates(struct efp *efp,
    enum efp_coord_type coord_type, const double *coord);
enum efp_result efp_set_frag_coordinates(struct efp *efp, size_t frag_idx,
    enum efp_coord_type coord_type, const double *coord);
enum efp_result efp_get_coordinates(struct efp *efp, double *xyzabc);
enum efp_result efp_get_frag_xyzabc(struct efp *efp, size_t frag_idx,
    double *xyzabc);
enum efp_result efp_set_periodic_box(struct efp *efp, double x, double y,
    double z, double alpha, double beta, double gamma);
enum efp_result efp_get_stress_tensor(struct efp *efp, double *stress);
enum efp_result efp_get_ai_screen(struct efp *efp, size_t frag_idx,
    double *screen);
enum efp_result efp_set_orbital_energies(struct efp *efp, size_t n_core,
    size_t n_act, size_t n_vir, const double *oe);
enum efp_result efp_set_dipole_integrals(struct efp *efp, size_t n_core,
    size_t n_act, size_t n_vir, const double *dipint);
enum efp_result efp_get_wavefunction_dependent_energy(struct efp *efp,
    double *energy);
enum efp_result efp_compute(struct efp *efp, int do_gradient);
enum efp_result efp_get_frag_charge(struct efp *efp, size_t frag_idx,
    double *charge);
enum efp_result efp_get_frag_multiplicity(struct efp *efp, size_t frag_idx,
    int *mult);
enum efp_result efp_get_frag_multipole_count(struct efp *efp, size_t frag_idx,
    size_t *n_mult);
enum efp_result efp_get_multipole_count(struct efp *efp, size_t *n_mult);
enum efp_result efp_get_multipole_coordinates(struct efp *efp, double *xyz);
enum efp_result efp_get_multipole_values(struct efp *efp, double *mult);